--- a/Scoreboard/src/plugin.yml
+++ b/Scoreboard/src/plugin.yml
@@ -1,5 +1,5 @@
-name: GScoreboard
-main: me.games647.gscoreboard.GScoreboard
+name: ScoreboardStats
+main: me.games647.scoreboardstats.ScoreboardStats
 author: games647
 version: 1.0
 database: true
