--- a/Scoreboard/src/config.yml
+++ b/Scoreboard/src/config.yml
@@ -1,1 +1,13 @@
-#
+#This is the default config
+
+#Here can you enable if the mob-kills should be counted and displayed
+mob-kills-enabled: false
+
+#Here can you enable if the player-kills should be counted and displayed
+player-kills-enabled: true
+
+# Here can you change the color and the displayed name too
+Title: '&a&lStats'
+Kills: '&9Kills     '
+Deaths: '&9Deaths     '
+Mob-kills: '&9Mob-Kills     '
