--- a/Scoreboard/src/plugin.yml
+++ b/Scoreboard/src/plugin.yml
@@ -3,3 +3,7 @@ main: me.games647.scoreboardstats.ScoreboardStats
 author: games647
 version: 1.0
 database: true
+softdepend: [mcMMO, Vault]
+permissions:
+  scoreboardstats.sign:
+    default: op
