Now use Bukkit API
Former-commit-id: 97c38bc448abcd22a07e74d682a03551020eb01f [formerly eeac6ec736dd7637b47c9e3f72ddac6654fb207f]
Former-commit-id: a97194fe06479ef6f3bc476faa10f7f318de1d63

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,4 +5,7 @@ version: ${project.version}
 description: ${project.description}
 website: ${project.url}
 database: true
-softdepend: [mcMMO, Vault, SurvivalGames, SimpleClans, MobArena, Paintball, InSigns, Essentials]
+softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials]
+commands:
+  Scoreboard:
+    
