Fix all previous things
Former-commit-id: f149b5b0979614f216bb64442c9f35387ecbd8f3 [formerly c943b72c6b842e6b0d897d01cda31369f5f1cb3c]
Former-commit-id: e57646eb103a9f77b4c6e35db88a25e90405e4f1

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,4 +8,7 @@ database: true
 softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials]
 commands:
   Scoreboard:
-    
+    usage: /Scoreboard
+permissions:
+  scoreboardstats.use:
+    default: true
