--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ version: ${project.version}
 description: ${project.description}
 website: ${project.url}
 database: true
-softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials]
+softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials, Factions, Jobs]
 commands:
   Scoreboard:
     usage: /Scoreboard
