--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
                     <source>1.6</source>
                     <target>1.6</target>
                     <debug>false</debug>
+                    <showWarnings>true</showWarnings>
                     <minimizeJar>true</minimizeJar>
                     <optimize>true</optimize>
                 </configuration>
