--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.5.1-R0.2</version>
+            <version>1.5.2-R0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
