Hide vanished players from the online value

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,9 @@ disabled-worlds:
   - world_nether
   - city
 
+#This will not count vanished players in the online value
+hide-vanished: false
+
 Scoreboard:
   Title: '&a&lStats'
   #seconds
