Former-commit-id: 5d80061c19e7408a36ed5c0e2b69d120aadf879a [formerly 5fe4acf06d13d02fd26a1d07fc8d1df3d8a54ebe] Former-commit-id: 5d55c8bfe91ff4d984fc1052fc3ae193dc62de07

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>me.games647</groupId>
+    <groupId>com.github.games647</groupId>
     <artifactId>scoreboardstats</artifactId>
-    <version>0.5.1</version>
+    <version>0.6</version>
     <packaging>jar</packaging>
     <description>Show the Scoreboard with custom variables</description>
     <url>http://dev.bukkit.org/server-mods/scoreboardstats</url>
@@ -89,12 +89,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.5.2-R0.1-SNAPSHOT</version>
+            <version>1.5.2-R0.1</version>
             <type>jar</type>
         </dependency>
     </dependencies>
 
     <build>
+        <defaultGoal>clean install</defaultGoal>
         <finalName>${project.name}</finalName>
         <plugins>
             <plugin>
