Cleanup and fix some bugs
Former-commit-id: 0d5c6b53c5f1841e419abc06faa41663f3ba9672 [formerly a87e316196bbcbef4037e688f9d4bec5490eefbd]
Former-commit-id: aebbdba3fdf301bcc065b632bb965e40dad9ce6e

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,8 +7,8 @@ website: ${project.url}
 database: true
 softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials, Factions, Jobs]
 commands:
-  Scoreboard:
-    usage: /Scoreboard
+  sbs:
+    usage: /sbs
 permissions:
   scoreboardstats.use:
     default: true
