--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
-*.class
+# Eclipse stuff
+/.classpath
+/.project
+/.settings
 
-# Package Files #
-*.ear
+# netbeans
+/nbproject
+
+# we use maven!
+/build.xml
+
+# maven
+/target
+
+# vim
+.*.sw[a-p]
+
+# various other potential build files
+/build
+/bin
+/dist
+/manifest.mf
+
+/world
+
+# Mac filesystem dust
+.DS_Store
+
+# intellij
+*.iml
+*.ipr
+*.iws
+.idea/
+
 /Scoreboard/target/
-/Scoreboard/nb-configuration.xml
-/nb-configuration.xml
