--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,6 +9,8 @@ disabled-worlds:
 #This will not count vanished players in the online value
 hide-vanished: false
 
+use-packet-system: false
+
 Scoreboard:
   Title: '&a&lStats'
   #seconds
