--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>.</groupId>
             <artifactId>Essentials</artifactId>
-            <version>0.0</version>
+            <version>2.11.1.2</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Essentials.jar</systemPath>
             <type>jar</type>
@@ -58,25 +58,25 @@
         <dependency>
             <groupId>.</groupId>
             <artifactId>SimpleClans</artifactId>
-            <version>0.0</version>
+            <version>1.0.2</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/SimpleClans-2.4.1.jar</systemPath>
+            <systemPath>${project.basedir}/lib/SimpleClans.jar</systemPath>
             <type>jar</type>
         </dependency>
 
         <dependency>
             <groupId>.</groupId>
             <artifactId>InSigns</artifactId>
-            <version>0.0</version>
+            <version>1.4</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/InSigns_v1.3.jar</systemPath>
+            <systemPath>${project.basedir}/lib/InSigns_v1.4.jar</systemPath>
             <type>jar</type>
         </dependency>
 
         <dependency>
             <groupId>.</groupId>
             <artifactId>mcMMO</artifactId>
-            <version>0.0</version>
+            <version>1.4.06 B2</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/mcMMO.jar</systemPath>
             <type>jar</type>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>.</groupId>
             <artifactId>Jobs</artifactId>
-            <version>0.0</version>
+            <version>1.0.2</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Jobs.jar</systemPath>
             <type>jar</type>
