--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,7 +12,7 @@ Hide-vanished: false
 Enable-sound: false
 
 Scoreboard:
-  Title: '&a&lStats'
+  Title: '&4[<3] &a&lStats &f&4[<3]'
   #seconds
   # For instant updates you can or 1 and it will update every second
   Update-delay: 1
