Added update check + delayed start of the Scoreboard + run database tasks asynchron
Former-commit-id: 5fe37296163223d84a1d73ee90703193b4d0e445 [formerly ffddddd3a36044929f3b8e41cd9a5247f612cc9e]
Former-commit-id: 84c560c71bebd5af288fbfb37367cec51f8c19a3

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,7 @@ commands:
 permissions:
   scoreboardstats.use:
     default: true
+  scoreboardstats.sign:
+    default: op
+  scoreboardstats.update:
+    default: op
