Former-commit-id: df823dbdfc0b25d9666acc1804a5ca3d0e0be891 [formerly 808e27b0bfe1328df16b0caeba705fbc4c4527c0] Former-commit-id: ae5a61f58728ebfa26474f2b9b41300dd9a84b42

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,12 +7,28 @@ website: ${project.url}
 database: true
 softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials, Factions, Jobs]
 commands:
-  sbs:
-    usage: /sbs
 permissions:
-  scoreboardstats.use:
+  scoreboardstats.admin:
+    default: op
+    children:
+      scoreboardstats.update: true
+      scoreboardstats.reload: true
+      scoreboardstats.sign: true
+      scoreboardstats.use: true
+      scoreboardstats.hide: true
+  scoreboardstats.member:
     default: true
+    children:
+      scoreboardstats.use: true
+      scoreboardstats.sign: true
+      scoreboardstats.hide: true
+  scoreboardstats.use:
+    description: ''
   scoreboardstats.sign:
-    default: op
+    description: ''
   scoreboardstats.update:
-    default: op
+    description: ''
+  scoreboardstats.reload:
+    description: ''
+  scoreboardstats.hide:
+    description: ''
