Update changelog + Add better Commands
Former-commit-id: 11f834b22bf9a3f49f8b4f0f9c9984ad71e22c04 [formerly 96b7912153b792fed5902040b8b7f2a6b1612e62]
Former-commit-id: 923f810469f12fca99981ab3eb525dc88b315c39

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,12 +5,14 @@ version: ${project.version}
 description: ${project.description}
 website: ${project.url}
 database: true
-softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials, Factions, Jobs]
+softdepend: [mcMMO, Vault, SimpleClans, InSigns, Essentials, Factions, Jobs, Heroes]
 commands:
   sb:reload:
     aliases: []
   sb:toggle:
     aliases: []
+  sidebar:
+    aliases: [scoreboardstats]
 permissions:
   scoreboardstats.admin:
     default: op
