Add Factions compatiblity

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ commands:
   sb:toggle:
     aliases: []
   sidebar:
-    aliases: [scoreboardstats]
+    aliases: [scoreboardstats, side]
 permissions:
   scoreboardstats.admin:
     default: op
