--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
             <type>jar</type>
         </dependency>
 
+
+        <dependency>
+            <groupId>.</groupId>
+            <artifactId>Factions2</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/Factions2.jar</systemPath>
+            <type>jar</type>
+        </dependency>
+
         <dependency>
             <groupId>.</groupId>
             <artifactId>Jobs</artifactId>
@@ -119,7 +129,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.5.2-R0.1</version>
+            <version>1.5.2-R1.0</version>
             <type>jar</type>
         </dependency>
     </dependencies>
