--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,6 @@
 
     <repositories>
         <repository>
-            <id>vault-repo</id>
-            <url>http://ci.herocraftonline.com/plugin/repository/everything</url>
-        </repository>
-
-        <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public/</url>
         </repository>
@@ -147,7 +142,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.5.2-R1.0</version>
+            <version>1.6.1-R0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
