--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.6.1-R0.1-SNAPSHOT</version>
+            <version>LATEST</version>
             <type>jar</type>
         </dependency>
 
