--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.games647</groupId>
     <artifactId>scoreboardstats</artifactId>
-    <version>0.5.9</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
+    <version>0.6</version>
     <description>Show the Scoreboard with custom variables</description>
     <url>http://dev.bukkit.org/bukkit-plugins/scoreboardstats</url>
     <name>ScoreboardStats</name>
@@ -25,36 +25,6 @@
         <developerConnection>scm:git:ssh://git@github.com:games647/ScoreboardStats.git</developerConnection>
     </scm>
 
-    <repositories>
-        <repository>
-            <id>vault-repo</id>
-            <url>http://ci.herocraftonline.com/plugin/repository/everything</url>
-            <releases>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>daily</updatePolicy>
-            </releases>
-        </repository>
-
-        <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public/</url>
-            <releases>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>daily</updatePolicy>
-            </releases>
-        </repository>
-
-        <repository>
-            <id>mcMMO</id>
-            <url>http://repo.mcmmo.org/</url>
-            <releases>
-                <checksumPolicy>warn</checksumPolicy>
-                <updatePolicy>daily</updatePolicy>
-            </releases>
-        </repository>
-
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -62,157 +32,26 @@
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Essentials</artifactId>
-            <version>2.11.1.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Essentials.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>SimpleClans</artifactId>
-            <version>1.0.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/SimpleClans.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>SimpleClans2</artifactId>
-            <version>2.4.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/SimpleClans-2.4.1.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>InSigns</artifactId>
-            <version>1.4</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/InSigns_v1.4.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Factions</artifactId>
-            <version>1.8.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Factions.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Factions2</artifactId>
-            <version>2.0.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Factions2.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>MCore</artifactId>
-            <version>6.4.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/mcore.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Jobs</artifactId>
-            <version>1.0.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Jobs.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Heroes</artifactId>
-            <version>1.5.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Heroes.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>net.milkbowl.vault</groupId>
-            <artifactId>Vault</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>LATEST</version>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>LATEST</version>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Craftbukkit16R1</artifactId>
-            <version>1.6.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/craftbukkit16R1.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Craftbukkit15R1</artifactId>
-            <version>1.6.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/craftbukkit15R1.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Craftbukkit15R2</artifactId>
-            <version>1.6.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/craftbukkit15R2.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>.</groupId>
-            <artifactId>Craftbukkit15R3</artifactId>
-            <version>1.6.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/craftbukkit15R3.jar</systemPath>
-            <type>jar</type>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gmail.nossr50.mcMMO</groupId>
-            <artifactId>mcMMO</artifactId>
-            <version>LATEST</version>
-            <type>jar</type>
-        </dependency>
     </dependencies>
 
     <build>
         <defaultGoal>clean install -DskipTests=true</defaultGoal>
         <finalName>${project.name}</finalName>
+        <directory>../../target</directory>
+
+        <sourceDirectory>../../src/main/java</sourceDirectory>
+        <testSourceDirectory>../../src/test</testSourceDirectory>
+
+        <resources>
+            <resource>
+                <directory>../../src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -228,6 +67,7 @@
                     <optimize>true</optimize>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -242,15 +82,9 @@
                 </configuration>
             </plugin>
         </plugins>
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>**</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
+
+    <modules>
+        <module>sub/main</module>
+    </modules>
 </project>
