Now use lombook

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.11.8</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
