--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     </dependencies>
 
     <build>
-        <defaultGoal>clean install -DskipTests=true</defaultGoal>
+        <defaultGoal>clean install</defaultGoal>
         <finalName>${project.name}</finalName>
         <directory>../../target</directory>
 
