--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
         </repository>
 
-        <!--Repo for Repository-->
+        <!--Repo for simpleclans-->
         <repository>
             <id>simpleclans-repo</id>
             <url>http://repo.sacredlabyrinth.net:8081/artifactory/releases/</url>
