Optimize Code + Fix some bugs + Update InSigns
+ Added external file for all messages
+ Added external file for the special characters

- Removed some duplicate characters

* Clean up many parts of code
* Change misleading config
* Set temporal scoreboard and pvp stats as default to false, because many people don't actually want it
* Let the Updater be on every build up to date
* Fix spelling mistake
* Update InSigns
* Fix a bug where some names won't be colored

Former-commit-id: 148a02c2d74941b33070f2c5d3b3e37a2ebb4f55 [formerly 533171b5810e5beab365eb43201fdb0b1e05b97e]
Former-commit-id: 51d32eff693b6aeeccce2fc6e4d8605253729d0d

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #Main configuration
 
-enable-pvpstats: true
+enable-pvpstats: false
 
 #In minutes
 PvPStats-SaveIntervall: 15
@@ -21,9 +21,9 @@ Scoreboard:
     #The Title must have under 16 characters
     #Title: Type
     '&9Online': '%online%'
-    '&9Money': '%econ%'
+    '&9Money': '%money%'
 
-Temp-Scoreboard-enabled: true
+Temp-Scoreboard-enabled: false
 
 Temp-Scoreboard:
   Title: '&a&lTop Kills'
