--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,12 @@
     <inceptionYear>2013</inceptionYear>
 
     <name>ScoreboardStats</name>
-    <description>Show the Scoreboard with custom variables</description>
-    <version>0.6</version>
+    <description>Show the Scoreboard with many custom variables</description>
+    <version>0.7-SNAPSHOT</version>
     <url>http://dev.bukkit.org/bukkit-plugins/scoreboardstats</url>
-
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <bukkit.version>LATEST</bukkit.version>
     </properties>
 
     <repositories>
@@ -35,8 +33,13 @@
             <id>simpleclans-repo</id>
             <url>http://repo.sacredlabyrinth.net:8081/artifactory/releases/</url>
         </repository>
-    </repositories>
 
+        <!--Repository for the auto updater to keep it up to date-->
+        <repository>
+            <id>gravity-repo</id>
+            <url>http://repo.gravitydevelopment.net</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!--Testing-->
@@ -50,15 +53,13 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>${bukkit.version}</version>
-            <type>jar</type>
+            <version>LATEST</version>
         </dependency>
 
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>${bukkit.version}</version>
-            <type>jar</type>
+            <groupId>net.gravitydevelopment.updater</groupId>
+            <artifactId>updater</artifactId>
+            <version>LATEST</version>
         </dependency>
 
         <!--API for economy, permissions and chat-->
@@ -66,21 +67,18 @@
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
             <version>LATEST</version>
-            <type>jar</type>
         </dependency>
 
         <dependency>
             <groupId>com.herocraftonline.heroes</groupId>
             <artifactId>Heroes</artifactId>
             <version>LATEST</version>
-            <type>jar</type>
         </dependency>
 
         <dependency>
             <groupId>net.sacredlabyrinth.phaed.simpleclans</groupId>
             <artifactId>SimpleClans</artifactId>
             <version>LATEST</version>
-            <type>jar</type>
         </dependency>
         <!--dependencies in /lib-->
 
@@ -88,10 +86,9 @@
         <dependency>
             <groupId>de.blablubbabc</groupId>
             <artifactId>insigns</artifactId>
-            <version>1.5</version>
+            <version>2.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/IndividualSigns_v1.5.jar</systemPath>
-            <type>jar</type>
+            <systemPath>${project.basedir}/lib/IndividualSigns_v2.0.jar</systemPath>
         </dependency>
 
         <!--Maven repo for mcmmo is down-->
@@ -101,7 +98,6 @@
             <version>1.4.07</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/mcMMO.jar</systemPath>
-            <type>jar</type>
         </dependency>
 
         <dependency>
@@ -110,7 +106,6 @@
             <version>2.3.0</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/Factions.jar</systemPath>
-            <type>jar</type>
         </dependency>
         <!--MCore must be avaible for factions-->
         <dependency>
@@ -119,13 +114,12 @@
             <version>7.0.1</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/mcore.jar</systemPath>
-            <type>jar</type>
         </dependency>
     </dependencies>
 
     <build>
         <defaultGoal>clean install</defaultGoal>
-        <finalName>${project.name} v${project.version}</finalName>
+        <finalName>${project.name}</finalName>
 
         <plugins>
             <plugin>
@@ -133,13 +127,41 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
+                    <!--To be compatible on all running craftbukkit version-->
                     <source>1.6</source>
                     <target>1.6</target>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                     <optimize>true</optimize>
-                    <debug>true</debug>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <artifactSet>
+                        <!--Add gravity's updater to scoreboardstats-->
+                        <includes>
+                            <include>net.gravitydevelopment.updater</include>
+                        </includes>
+                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>net.gravitydevelopment.updater</pattern>
+                            <shadedPattern>com.github.games647.scoreboardstats</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
