Fix unknown resource bundle
Former-commit-id: dcebd5dab05d0c36d4bf870393df486c61ac5aa7 [formerly b19fa53f6b3db822e046a27a80b3022ab2a9e845]
Former-commit-id: 3d87c3dc664d0a7684163c879c94fd97280b5c0b

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
             <version>LATEST</version>
         </dependency>
 
+        <!--Auto updater-->
         <dependency>
             <groupId>net.gravitydevelopment.updater</groupId>
             <artifactId>updater</artifactId>
